# dupman

./: .gitignore  pyproject.toml
src/dupman/: analyzer.py  data.py  file_manager.py  reader.py
