[tool.poetry]
name = "dupman"
version = "0.1.0"
description = ""
authors = ["Alexandre Barbosa <alexandreab@live.com>"]
readme = "README.md"
packages = [{include = "dupman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
